objects/vlocity_cmt__CachedAPIMigrate__c.object
<CustomObject>
    <description>Data model to be used for tracking the cached dependency objects.</description>
    <fields>
        <fullName>vlocity_cmt__ExternalJobId__c</fullName>
        <description>This stores the job id of the sync job running on an external system.</description>
        <externalId>true</externalId>
        <label>ExternalJobId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>This stores the message coming from external system</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>This stores the status of the migrate job</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>queued</fullName>
                    <default>true</default>
                    <label>queued</label>
                </value>
                <value>
                    <fullName>running</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>errored</fullName>
                </value>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CachedAPIMigrate</label>
    <nameField>
        <label>CachedAPIMigrate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIMigrates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>